# pure-localstorage

./: default.nix  pure-localstorage.cabal
src/Pure/Data/: LocalStorage.hs
