name:                pure-localstorage
version:             0.7.0.0
synopsis:            
homepage:            github.com/grumply/pure-localstorage
license:             BSD3
license-file:        LICENSE
author:              Sean Mackenzie
maintainer:          sean@grump.ly
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:
    Pure.Data.LocalStorage

  build-depends:
    base >= 4.8,
    pure-json >= 0.7 && < 1,
    pure-lifted >= 0.7 && < 1,
    pure-txt >= 0.7 && < 1,
    unordered-containers

  if (impl(ghcjs))
    js-sources: js-src/lz-string.js

  hs-source-dirs:      src
  default-language:    Haskell2010
