name:                pure-localstorage
version:             0.8.0.0
homepage:            purehs.org/doc/pure-localstorage
license:             BSD3
license-file:        LICENSE
author:              Sean Hickman
maintainer:          sean@grumply.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type: git
  location: https://github.com/grumply/pure-localstorage.git

library
  exposed-modules:
    Pure.Data.LocalStorage

  build-depends:
    base,
    pure-json,
    pure-lifted,
    pure-txt,
    unordered-containers

  if (impl(ghcjs))
    js-sources: vendor/lz-string.js

  hs-source-dirs:      src
  default-language:    Haskell2010
